# mason

./: .cmake-format.yaml  .gitmodules  CMakeLists.txt  README.mason_frag_sequencing.md  README.mason_genome.md  README.mason_materializer.md  README.mason_methylation.md  README.mason_simulator.md  README.mason_splicing.md  README.mason_variator.md  README.md
.github/workflows/: ci_icc.yml  ci_linux.yml  ci_macos.yml  ci_win.yml
include/mason/: external_split_merge.h  fragment_generation.h  genomic_variants.h  mason_options.h  methylation_levels.h  sequencing.h  simulate_genome.h  vcf_materialization.h
lib/: seqan2-config.cmake
src/: mason_frag_sequencing.cpp  mason_genome.cpp  mason_materializer.cpp  mason_methylation.cpp  mason_simulator.cpp  mason_splicing.cpp  mason_variator.cpp
src/mason/: external_split_merge.cpp  genomic_variants.cpp  mason_options.cpp  mason_tests.cpp  methylation_levels.cpp  simulate_454.cpp  simulate_base.cpp  simulate_genome.cpp  simulate_illumina.cpp  simulate_sanger.cpp  vcf_materialization.cpp
tests/: random_var10.fasta  random_var10.vcf  run_tests.py  simulator.left2.fq  simulator.left6.fq  simulator.left7.fa  simulator.out2.sam  simulator.out7.sam  simulator.right2.fq  simulator.right6.fq
tests/py_lib/: CMakeLists.txt
